--- a/index.html
+++ b/index.html
@@ -5,28 +5,44 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        
-        <form method="post" id="regform">
-            <div class="container">
-                <h1>Registration Form</h1>
-            <label for="Name">Name:</label>
-            <input type="text" placeholder="Enter your name" required><br/>
+        <center>
+            <form>
+                    <legend>REGISTRATION FORM</legend>
+                    <hr>
+                    <table>
+                        <tr>
+                            <td>Name:</td>
+                            <td><input type="text" id="name" name="name" required></td>
+                        </tr>
+                        
+                        <tr>
+                            <td>Email:</td>
+                            <td><input type="email" id="email" name="email" required></td>
+                        </tr>
 
-            <label for="Email">Email Id::</label>
-            <input type="email" placeholder="Enter your Email id" required><br/>
+                        <tr>
+                            <td>Password:</td>
+                            <td><input type="password" id="pwd" name="pwd" required></td>
+                        </tr>
 
-            <label for="pwsd">Password:</label>
-            <input type="password" placeholder="Enter Password" required><br/>
+                        <tr>
+                            <td>Mobile No:</td>
+                            <td><input type="number" id="phno" name="phno" required></td>
+                        </tr>
 
-            <label for="Phone">Phone No:</label>
-            <input type="number" placeholder="Enter Your Mobile No" required><br/>  
-
-            <label for="country">country</label>
-            <input type="checkbox" name="country" required>India
-            <input type="checkbox" name="country" required>Usa
-            </div>
-            <br/>
-            <button type="submit" class="register">submit</button>
-        </form>
+                        <tr>
+                            <td>Country</td>
+                            <td>
+                                <input type="checkbox" id="cind" name="cind" value="india">India
+                                <input type="checkbox" id="cus" name="cus" value="usa">USA
+                                <input type="checkbox" id="cuk" name="cuk" value="uk">UK
+                            </td>
+                        </tr>
+                        <tr>
+                            <td><input type="submit" value="submit" id="sbtn" name="sbtn"></td>
+                        </tr>
+                    </table>
+            </form>
+        </center>
     </body>
 </html>
